--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ wrapt = '*'
 psutil = '*'
 requests = { version = ">=2.26.0", optional = true }
 kafka-python = { version = "*", optional = true }
+confluent-kafka = "^2.0.2"
 
 [tool.poetry.extras]
 all=[
