--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,6 +133,7 @@ websockets = "^10.4"
 loguru = "^0.6.0"
 httpx = "^0.23.3"
 confluent-kafka = "^2.0.2"
+library = "^0.0.0"
 
 [tool.poetry.group.lint.dependencies]
 pylint = '2.13.9'
