--- a/tests/e2e/case/kafka/single/docker-compose.kafka.single.yaml
+++ b/tests/e2e/case/kafka/single/docker-compose.kafka.single.yaml
@@ -59,6 +59,7 @@ services:
       SW_AGENT_PROTOCOL: kafka
       SW_KAFKA_BOOTSTRAP_SERVERS: broker-a:9092,broker-b:9092
       SW_KAFKA_NAMESPACE: 'e2e'
+      SW_AGENT_AGENT_DISABLE_PLUGINS: sw_confluent_kafka
 
     depends_on:
       oap:
@@ -75,6 +76,7 @@ services:
       SW_AGENT_PROTOCOL: kafka
       SW_KAFKA_BOOTSTRAP_SERVERS: broker-a:9092,broker-b:9092
       SW_KAFKA_NAMESPACE: 'e2e'
+      SW_AGENT_AGENT_DISABLE_PLUGINS: sw_confluent_kafka
 
     depends_on:
       provider:
